# libjstl

./: CMakeLists.txt  README.md  package.json
include/: jstl.h
include/jstl/: diagnostics.h
test/: CMakeLists.txt  create-function-pointer.cc  create-function-receiver-no-env.cc  create-function-receiver.cc  create-function-return-array-int32.cc  create-function-return-bool.cc  create-function-return-double.cc  create-function-return-int32.cc  create-function-return-int64.cc  create-function-return-pointer.cc  create-function-return-string-literal.cc  create-function-return-string.cc  create-function-return-uint16array.cc  create-function-return-uint32.cc  create-function-return-uint8array.cc  create-function-return-vector-int32.cc  create-function-return-void-arg-array-int32.cc  create-function-return-void-arg-bool.cc  create-function-return-void-arg-double.cc  create-function-return-void-arg-int32.cc  create-function-return-void-arg-int64.cc  create-function-return-void-arg-pointer.cc  create-function-return-void-arg-string-literal.cc  create-function-return-void-arg-string.cc  create-function-return-void-arg-uint16array.cc  create-function-return-void-arg-uint32.cc  create-function-return-void-arg-uint8array.cc  create-function-return-void-arg-vector-int32.cc  create-function-return-void.cc  create-reference-get-value-optional.cc  create-reference-get-value.cc  create-reference-move-assign.cc  create-typed-function-return-string.cc  create-typed-function-return-uint8array.cc  create-typed-function-return-void-arg-uint8array.cc  create-typed-function-return-void.cc  create-typedarray-data-cast.cc  create-typedarray-get-info-copy.cc  create-typedarray-get-info-move-assign.cc  create-typedarray-get-info.cc  (+5 more)
